[gd_scene load_steps=5 format=3 uid="uid://hee6yggaco67"]

[ext_resource type="Script" path="res://Main.gd" id="1_cdutg"]
[ext_resource type="Script" path="res://BannerScore.gd" id="2_68auu"]
[ext_resource type="Script" path="res://textInput.gd" id="2_k0atx"]
[ext_resource type="Script" path="res://TapGame.gd" id="4_d3tnj"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cdutg")

[node name="background" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.247059, 0.247059, 0.247059, 1)

[node name="controls" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="controls"]
layout_mode = 2

[node name="top bar" type="Control" parent="controls/VBoxContainer"]
layout_mode = 2

[node name="left" type="Label" parent="controls/VBoxContainer/top bar"]
layout_mode = 1
offset_right = 62.0
offset_bottom = 26.0
text = "left side"

[node name="center" type="Label" parent="controls/VBoxContainer/top bar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_right = 43.0
offset_bottom = 26.0
grow_horizontal = 2
text = "center side"
horizontal_alignment = 1

[node name="right" type="Label" parent="controls/VBoxContainer/top bar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -73.0
offset_bottom = 26.0
grow_horizontal = 0
text = "right side"
horizontal_alignment = 2
script = ExtResource("2_68auu")

[node name="InputOutput" type="Control" parent="controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="controls/VBoxContainer/InputOutput"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextOutput" type="RichTextLabel" parent="controls/VBoxContainer/InputOutput/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
focus_mode = 2
fit_content = true
scroll_active = false
selection_enabled = true

[node name="TextInput" type="LineEdit" parent="controls/VBoxContainer"]
layout_mode = 2
caret_blink = true
script = ExtResource("2_k0atx")

[node name="TapGame" type="Node" parent="."]
script = ExtResource("4_d3tnj")

[connection signal="text_submitted" from="controls/VBoxContainer/TextInput" to="controls/VBoxContainer/TextInput" method="_on_text_submitted"]
[connection signal="location_changed" from="TapGame" to="controls/VBoxContainer/top bar/left" method="set_text"]
[connection signal="narration_changed" from="TapGame" to="controls/VBoxContainer/InputOutput/ScrollContainer/TextOutput" method="append_text"]
[connection signal="score_changed" from="TapGame" to="controls/VBoxContainer/top bar/right" method="set_score"]
[connection signal="title_changed" from="TapGame" to="controls/VBoxContainer/top bar/center" method="set_text"]
[connection signal="turns_changed" from="TapGame" to="controls/VBoxContainer/top bar/right" method="set_turns"]
